ImgUI.js and UI.js is added. The field with add button is solved nicely. The container's display is set to flex so that the contents can be aligned middle. It has 30 px height and the text height is 20px

--- a/productMods/css/lib.css
+++ b/productMods/css/lib.css
@@ -1,3 +1,25 @@
+/****************************************************
+*** Text with add button afterwards
+*****************************************************/
+
+.addFieldContainer {
+	display : flex;
+	align-items : center;
+	height : 30px;
+	font-size : 18px;
+}
+
+.addFieldText {
+	display : inline-block;
+	margin-left : 8px;
+	font-size : 20px;
+}
+
+.addFieldImg {
+	display : inline-block;
+	margin-left : 8px;
+}
+
 .moduleTitle {
 	font-style: italic;
 	margin: 10px 2px;
